--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "async-odoo-xmlrpc": "^2.0.0",
     "axios": "^1.6.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "framer-motion": "^10.17.0",
     "global": "^4.4.0",
     "http-server": "^14.1.1",
     "ioredis": "^5.3.2",
