--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-server": "^14.1.1",
     "ioredis": "^5.3.2",
     "iron-session": "^8.0.1",
+    "lucide-react": "^0.316.0",
     "next": "14.0.3",
     "next-iron-session": "^4.2.0",
     "next-pwa": "^5.6.0",
