--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "framer-motion": "^10.17.0",
+    "flubber": "^0.4.2",
+    "framer-motion": "^11.0.3",
     "global": "^4.4.0",
     "http-server": "^14.1.1",
     "ioredis": "^5.3.2",
